# alura-space

./: .gitignore  pyproject.toml
galeria/: admin.py  models.py  urls.py  views.py
galeria/migrations/: 0001_initial.py  0002_fotografia_categoria.py  0003_fotografia_publicada.py  0004_fotografia_criada_em.py  0005_alter_fotografia_criada_em_alter_fotografia_foto.py  0006_alter_fotografia_categoria_and_more.py  0007_fotografia_postada_por_alter_fotografia_criada_em.py
setup/: settings.py  urls.py
templates/: index.html
templates/galeria/: base.html  buscar.html  imagem.html  index.html
templates/galeria/partials/: _menu-lateral.html
templates/partials/: _alertas.html  _footer.html  _menu-lateral.html
templates/usuario/: cadastro.html  login.html
usuario/: forms.py  urls.py  views.py
