[tool.poetry]
name = "alura-space"
version = "0.1.0"
description = ""
authors = ["lucianogomes02 <luciano@pontotel.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
python-dotenv = "^0.21.1"
black = "^23.1.0"
pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
